8448. Fixed misalignment in card header icon

--- a/src/components/cards/_cards-new.scss
+++ b/src/components/cards/_cards-new.scss
@@ -234,7 +234,7 @@
     line-height: $ids-number-font-line-height-sm;
 
     ~ svg.icon {
-      top: 9px;
+      top: 1px;
     }
 
     + p {
