--- a/src/components/cards/_cards.scss
+++ b/src/components/cards/_cards.scss
@@ -471,7 +471,7 @@ $card-header-section: '.card-header-section', '.widget-header-section';
       cursor: pointer;
       margin-left: 5px;
       position: relative;
-      top: -7px;
+      margin-right: 15%;
     }
   }
 
